fixed some clipping issues on the reviews page on the smallest size

--- a/styles.css
+++ b/styles.css
@@ -227,9 +227,14 @@ aside.contact a {
     display: none;
   }
 
-  nav li {
+  nav li,
+  nav .dropdown {
     width: 80%;
     margin: 5px auto;
+  }
+
+  .reviews header {
+    margin-top: 6rem;
   }
 
   ul {
